test_suite5/ALAN/test_suite/alan-2022-examples/passing/000015_random.alan
source a function L() begin boolean Wn, u2uha, HDq1a; boolean u, S; relax end begin relax end
